# sendy-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: __init__.py  api.py  errors.py
app/api/api_v1/: __init__.py
app/api/api_v1/routes/: authentication.py  messages.py  users.py
app/api/dependencies/: authentication.py
app/core/: logging.py  utils.py
app/core/settings/: app.py  base.py  development.py  test.py
app/db/queries/: queries.pyi
app/db/queries/sql/: messages.sql  statuses.sql  users.sql
app/db/repositories/: messages.py  statuses.py  users.py
app/models/: common.py
app/models/domain/: messages.py  users.py
app/models/schemas/: jwt.py  messages.py  sockets.py  statuses.py  users.py
app/resources/: strings.py
app/services/: jwt.py  sockets.py  statuses.py
