[tool.poetry]
name = "fastapi-api"
version = "1.0.0"
description = ""
authors = ["Alexandr Chikur <alexandr.chikur@mail.ru>"]
readme = "README.md"
packages = [{include = "fastapi_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}
loguru = "^0.6.0"
asyncpg = "^0.27.0"
fastapi-versioning = "^0.10.0"
black = "^22.12.0"
isort = "^5.11.4"
autoflake = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
